
[project]
name = "constrained_diffusion"
version = "1.2.3"
description = "Constrained diffusion decomposition: Diffusion-based Multi-Scale Analysis of Complex Iages"
readme = "README.md"
requires-python = ">=3.0"
license = { file = "LICENSE" }
authors = [
    { name = "Guang-Xing Li", email = "ligx.ngc7293@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.00",
    "scipy>=1.0",
]



[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project.urls]
Homepage = "https://gxli.github.io/Constrained-Diffusion-Decomposition/"



